--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #Custom files we don't want pushing to the repo:
 botconfig.py
+Lavalink.jar
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
